[package]
name = "mod-compatibility-checker"
version = "0.1.1"
edition = "2021"
authors = ["Lasm Gratel"]
homepage = "https://github.com/LasmGratel/mod-compatibility-checker"
repository = "https://github.com/LasmGratel/mod-compatibility-checker"
description = "Checks Minecraft server-client mod compatibility"
documentation = "https://docs.rs/mod-compatibility-checker"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
tokio-stream = { version = "0.1", features = ["fs"] }
#zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
async_zip = "0.0.7"
futures = { version = "0.3", features = ["thread-pool"] }
num_cpus = "1"
memmap2 = { version = "0.5" }
rayon = "1.5"
crossbeam-channel = "0.5"
vc-ltl = "5.0"
blake3 = { version = "1", features = ["rayon"] }
simd-json = { version = "*", features = ["allow-non-simd"] }
mimalloc = { version = "*", default-features = false }
clap = { version = "3", features = ["derive"] }


[profile.release]
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size.
lto = true